--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-18.22MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 乌克兰-3.44MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇺🇸 美国-959.4KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇬🇧 英国-2.93MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇬🇧 英国-853.8KB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.08MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 台湾-2.29MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-20.11MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇯🇵 日本-21.14MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.69MB/s(Youtube:不良林), server: 213.183.59.211, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-356.3KB/s(Youtube:不良林), server: events.starspace.link, port: 443, type: trojan, password: 3RWFPCmWd4lYIMof, sni: events.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 乌克兰-3.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-853.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
