--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 台湾-2.29MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇯🇵 日本-20.11MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇯🇵 日本-21.14MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.69MB/s(Youtube:不良林), server: 213.183.59.211, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-344.1KB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-259.2KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 乌克兰-3.33MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
+  - {name: 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-259.2KB/s(Youtube:不良林)
+      - 乌克兰-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-280.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
