--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇩🇪 德国-2.51MB/s(Youtube:不良林), server: de-03.fireplay.io, port: 443, type: trojan, password: 63X7Dg58EII2qt6f, sni: de-03.fireplay.io, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.19MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 未知国家-170.6KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-356.3KB/s(Youtube:不良林), server: events.starspace.link, port: 443, type: trojan, password: 3RWFPCmWd4lYIMof, sni: events.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
+  - {name: 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇨🇳 中国-565.5KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇫🇷 法国-2.89MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-162.2KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-304.1KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-8.19MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.00MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 未知国家-170.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-356.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-565.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-162.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-8.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
